<resources>
    <string name="app_name">Phone Companion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="audio">Set Audio Profiles</string>
    <string name="Ring">Ring</string>
    <string name="Vibrate">Vibrate</string>
    <string name="Silent">Silent</string>
    <string name="Mode">Current Mode</string>
    <string name="Status">Current Status</string>
    <string name="Sms">SMS</string>
    <string name="save_code">Save Code</string>
    <string name="enter_code_here">Enter Code Here</string>

</resources>
