<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/audio"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="80dp"
        android:layout_toStartOf="@+id/button2"
        android:onClick="silent"
        android:text="@string/Silent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toEndOf="@+id/button1"
        android:onClick="ring"
        android:text="@string/Ring" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignStart="@+id/button3"
        android:layout_marginBottom="15dp"
        android:onClick="mode"
        android:text="@string/Mode" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/Status"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignEnd="@+id/textView1"
        android:onClick="vibrate"
        android:text="@string/Vibrate" />

    <TextView
        android:id="@+id/sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:text="@string/Sms"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_code"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_marginStart="80dp"
        android:layout_marginTop="110dp"
        android:hint="@string/enter_code_here" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_code"
        android:layout_below="@+id/edit_code"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save_btn"
        android:text="" />


</RelativeLayout>